--- a/src/template/select_apartment.html
+++ b/src/template/select_apartment.html
@@ -11,24 +11,24 @@
 
             <div class="col-12 galery">
 				
-				<div class="glavna">
-                    <div class="rightt"> <img src="img/apartments/right.png"/> </div>
-                    <img src="img/apartments/first/1.jpg" width="100%" alt="" id="glav">
+				<div class="main-apartment">
+                    <div class="right"> <img src="img/apartments/right.png"/> </div>
+                    <img src="img/apartments/first/1.jpg" width="100%" alt="" id="main">
                     <div class="left"> <img src="img/apartments/left.png"/> </div>
 
 				</div>
 				
 					 </div>
-					 <div class="hid">
+					 <div class="hidden">
 						<div class="slike">
-						  <img src="img/apartments/first/1.jpg" width="100%" alt="" class="slk">
-						  <img src="img/apartments/first/2.jpg" width="100%" alt="" class="slk">
-						  <img src="img/apartments/first/3.jpg" width="100%" alt="" class="slk">
-						  <img src="img/apartments/first/4.jpg" width="100%" alt="" class="slk">
-						  <img src="img/apartments/first/5.jpg" width="100%" alt="" class="slk">
-						  <img src="img/apartments/first/6.jpg" width="100%" alt="" class="slk">
-						  <img src="img/apartments/first/7.jpg" width="100%" alt="" class="slk">
-						  <img src="img/apartments/first/8.jpg" width="100%" alt="" class="slk">
+						  <img src="img/apartments/first/1.jpg" width="100%" alt="" class="small-slike">
+						  <img src="img/apartments/first/2.jpg" width="100%" alt="" class="small-slike">
+						  <img src="img/apartments/first/3.jpg" width="100%" alt="" class="small-slike">
+						  <img src="img/apartments/first/4.jpg" width="100%" alt="" class="small-slike">
+						  <img src="img/apartments/first/5.jpg" width="100%" alt="" class="small-slike">
+						  <img src="img/apartments/first/6.jpg" width="100%" alt="" class="small-slike">
+						  <img src="img/apartments/first/7.jpg" width="100%" alt="" class="small-slike">
+						  <img src="img/apartments/first/8.jpg" width="100%" alt="" class="small-slike">
 						  
 						</div>
                       </div>
@@ -57,8 +57,6 @@
             <p>2</p>
             <p>2</p>
         </div>
-
-
 
     <div class="col-7"><p class="main-text">Остання квартира в новому сучасному жилому комплексі, панорамні вікна; стіни - червона цегла; можливо зробити перепланування на свій розсуд; комплекс закритого типу; охорона; поруч з будинком розташований дитячий садок та ліцей нового зразка з поглибленим вивченням англійської мови; будинок зданий та введений в єксплуатацію, триває процес отримання документів. Будинок бізнес-класу, з квартирами підвищеної комфортності і невеликою кількістю квартир на поверсі</p> 
     <p class="price"><span class="name-big" >Вартість</span> <span class="title-big">65 тис.дол</span></p> </div>
