--- a/src/template/select_apartment.html
+++ b/src/template/select_apartment.html
@@ -6,64 +6,51 @@
                     Вибір власного житла- це один з найважливіших рішень у житті людини. Це не дивно, адже від вибору житла залежатиме комфорт і затишок проживання в певному середовищі кожної людини.<br>Саме тому перед придбанням нової квартири, потрібно обов'язково ретельно підійти до цього питання, щоб не помилитися і зробити максимально правильний вибір квартири для свого подальшого життя.
                 </p>
             </div>
-
 <!-- Галерея------------------------------- -->
-
             <div class="col-12 galery">
-				
 				<div class="main-apartment">
                     <div class="right"> <img src="img/apartments/right.png"/> </div>
                     <img src="img/apartments/first/1.jpg" width="100%" alt="" id="main">
                     <div class="left"> <img src="img/apartments/left.png"/> </div>
-
 				</div>
-				
-					 </div>
-					 <div class="hidden">
-						<div class="slike">
-						  <img src="img/apartments/first/1.jpg" width="100%" alt="" class="small-slike">
-						  <img src="img/apartments/first/2.jpg" width="100%" alt="" class="small-slike">
-						  <img src="img/apartments/first/3.jpg" width="100%" alt="" class="small-slike">
-						  <img src="img/apartments/first/4.jpg" width="100%" alt="" class="small-slike">
-						  <img src="img/apartments/first/5.jpg" width="100%" alt="" class="small-slike">
-						  <img src="img/apartments/first/6.jpg" width="100%" alt="" class="small-slike">
-						  <img src="img/apartments/first/7.jpg" width="100%" alt="" class="small-slike">
-						  <img src="img/apartments/first/8.jpg" width="100%" alt="" class="small-slike">
-						  
-						</div>
-                      </div>
-
+            </div>
+            <div class="hidden">
+                <div class="slike">
+                    <img src="img/apartments/first/1.jpg" width="100%" alt="" class="small-slike">
+                    <img src="img/apartments/first/2.jpg" width="100%" alt="" class="small-slike">
+                    <img src="img/apartments/first/3.jpg" width="100%" alt="" class="small-slike">
+                    <img src="img/apartments/first/4.jpg" width="100%" alt="" class="small-slike">
+                    <img src="img/apartments/first/5.jpg" width="100%" alt="" class="small-slike">
+                    <img src="img/apartments/first/6.jpg" width="100%" alt="" class="small-slike">
+                    <img src="img/apartments/first/7.jpg" width="100%" alt="" class="small-slike">
+                    <img src="img/apartments/first/8.jpg" width="100%" alt="" class="small-slike">
+                </div>
+            </div>
 <!-- --------------------------------------------------------- -->
         </div>
     </div>
-
-
-    <div class="container ">
+    <div class="container">
         <div class="row flat--bcg">    
-        <div class="offset-1 col-2 title">
-            <p>Місто:</p>
-            <p>Тип житла:</p>
-            <p>Загальна площа:</p>
-            <p>Житлова площа:</p>
-            <p>Кімнат:</p>
-            <p>Поверх:</p>
+            <div class="offset-1 col-2 title">
+                <p>Місто:</p>
+                <p>Тип житла:</p>
+                <p>Загальна площа:</p>
+                <p>Житлова площа:</p>
+                <p>Кімнат:</p>
+                <p>Поверх:</p>
+            </div>
+            <div class="col-1 name">
+                <p>Рівне</p>
+                <p>Квартира</p>
+                <p>72м<sup>2</sup></p>
+                <p>60м<sup>2</sup></p>
+                <p>2</p>
+                <p>2</p>
+            </div>
+            <div class="col-7">
+                <p class="main-text">Остання квартира в новому сучасному жилому комплексі, панорамні вікна; стіни - червона цегла; можливо зробити перепланування на свій розсуд; комплекс закритого типу; охорона; поруч з будинком розташований дитячий садок та ліцей нового зразка з поглибленим вивченням англійської мови; будинок зданий та введений в єксплуатацію, триває процес отримання документів. Будинок бізнес-класу, з квартирами підвищеної комфортності і невеликою кількістю квартир на поверсі</p> 
+                <p class="price"><span class="name-big" >Вартість</span> <span class="title-big">65 тис.дол</span></p> 
+            </div>
         </div>
-
-        <div class="col-1 name">
-            <p>Рівне</p>
-            <p>Квартира</p>
-            <p>72м<sup>2</sup></p>
-            <p>60м<sup>2</sup></p>
-            <p>2</p>
-            <p>2</p>
-        </div>
-
-    <div class="col-7"><p class="main-text">Остання квартира в новому сучасному жилому комплексі, панорамні вікна; стіни - червона цегла; можливо зробити перепланування на свій розсуд; комплекс закритого типу; охорона; поруч з будинком розташований дитячий садок та ліцей нового зразка з поглибленим вивченням англійської мови; будинок зданий та введений в єксплуатацію, триває процес отримання документів. Будинок бізнес-класу, з квартирами підвищеної комфортності і невеликою кількістю квартир на поверсі</p> 
-    <p class="price"><span class="name-big" >Вартість</span> <span class="title-big">65 тис.дол</span></p> </div>
-
     </div>
-    </div>
-
-
-
 </section>
