Fix styles apartments.html

--- a/app/app/static/css/views/_apartments.scss
+++ b/app/app/static/css/views/_apartments.scss
@@ -44,7 +44,7 @@
       color: $font-text--color-primary;
     }
     a:hover{
-color: $default--color__1;
+      color: $default--color__1;
     }
 
   }
@@ -64,6 +64,8 @@ color: $default--color__1;
 
 img{
 position: relative;
+height: 320px;
+width: 500px;
 }
 
 .imgright{
