--- a/app/templates/pages/apartments.html
+++ b/app/templates/pages/apartments.html
@@ -15,6 +15,7 @@
                 <div class="col-lg-6 col-sm-12">
                     <img src="{{ apartment.photo_0.url }}">
                 </div>
+                <div class="border"></div>
                 <div class="offset-lg-1 col-lg-5 col-sm-12 info">
                     <h5>{{ apartment.title }}</h5>
                     <div class="flat--bcg">
