--- a/app/templates/admin/base_site.html
+++ b/app/templates/admin/base_site.html
@@ -1,11 +1,21 @@
 {% extends 'admin/base.html' %}
 {% load static %}
+
 {% block branding %}
 <h1>
 <img src="{% static 'img/Logo.png' %}" alt="Logo">
 Great Decision
 </h1>
-{% endblock branding %}
+{% endblock %}
+
+{% block content %}
+<h1>
+    Last
+</h1>
+{% endblock %}
+
+
 {% block extrastyle %}
 <link rel="stylesheet" href="{% static 'css/admin.css' %}">
-{% endblock extrastyle %}
+{% endblock %}
+
