--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -17,20 +17,15 @@
                         </a>
                     </div>
                     {% if user.is_authenticated %}
-                        <a class="offset-4 col-1 align-self-center enter" href="{% url 'dashboard' %}"
-                        {% if 'dashboard' in request.path %}
-                        style="color:red"
-                        {% else %}
-                        {% endif %}
-                        >Welcome {{ user.username }}</a>
-                        <a class="col-1 align-self-center register" href="javascript:{document.getElementById('logout').submit()}" >Вихід</a>
+                        <a class="offset-2 col-4 align-self-center enter" href="{% url 'dashboard' %}">Welcome, {{ user.username }}</a>
+                        <a class="col-1 align-self-center" href="javascript:{document.getElementById('logout').submit()}" >Вихід</a>
                         <form action="{% url 'logout' %}" id="logout" method="POST">
                             {% csrf_token %}
                             <input type="hidden">
                         </form>
                     {% else %}
-                        <a class="offset-4 col-1 align-self-center enter" href="{% url 'login' %}">Вхід</a>
-                        <a class="col-1 align-self-center register" href="{% url 'register' %}">Реєстрація</a>
+                        <a class="offset-2 col-4 align-self-center enter" href="{% url 'login' %}">Вхід</a>
+                        <a class="col-1 align-self-center" href="{% url 'register' %}">Реєстрація</a>
                     {% endif %}
                 </div>
             </div>
