--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="col-12 btn">
-                <button class="btn--forward"> Більше >> </button>
+                <button class="btn--forward" onclick="window.location='{% url 'apartments' %}'"> Більше >> </button>
             </div>
             <div class="choice">
                 <div class="container">
