--- a/app/templates/partials/_review.html
+++ b/app/templates/partials/_review.html
@@ -39,7 +39,7 @@
 
     <div class="row">
         <div class="col-12">
-            <button class="btn--forward">Більше >></button>
+            <button class="btn--forward" onclick="window.location = '{% url 'testimonials' %}'">Більше >></button>
         </div>
     </div>
 
