--- a/app/templates/account/dashboard.html
+++ b/app/templates/account/dashboard.html
@@ -1,16 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Dashboard</h2>
-{% if apartments %}
 <section class="apartments">
     <div class="container">
-        <div class="row">
+    <h2>Список обраних квартир</h2>
+        {% comment %} <div class="row">
             <div class="col-12">
                 <p class="text-title upper">
                     Вибір власного житла- це один з найважливіших рішень у житті людини. Це не дивно, адже від вибору житла залежатиме комфорт і затишок проживання в певному середовищі кожної людини.<br>Саме тому перед придбанням нової квартири, потрібно обов'язково ретельно підійти до цього питання, щоб не помилитися і зробити максимально правильний вибір квартири для свого подальшого життя.
                 </p>
             </div>
-        </div>
+        </div> {% endcomment %}
             {% if apartments %}
             <div class="row">
                 {% for apartment in apartments %}
@@ -35,11 +34,6 @@
                 </div>
                 <div class="col-12 space"></div>
                 {% endfor %}
-            </div>
-            {% else %}
-            <div>Нічого не знайдено</div>
-            {% endif %}
-            <div class="col-12 space"></div>
             <div class="pagination col-12">
                 <nav aria-label="Page navigation example">
                     <ul class="step-links pagination">
@@ -55,8 +49,12 @@
                     </ul>
                 </nav>
             </div>
+            </div>
+            {% else %}
+            <div>Список порожній</div>
+            {% endif %}
+            <div class="col-12 space"></div>
         </div>
     </div>  
 </section>
-{% endif %}
 {% endblock %}
