--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -6,7 +6,7 @@
             <form action="{% url 'login' %}" method="POST" class="col-6">
                 {% csrf_token %}
                 <h2>Вхід в <span>особистий кабінет</span></h2>
-
+                {% comment %} {% include 'partials/_alert.html' %} {% endcomment %}
                 <input type="text" name="username" placeholder="Логін" required="">
                 <input type="password" name="password" placeholder="Пароль" required="">
 
