--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-grid.css' %}"> {% endcomment %}
         <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}">
         <link rel="stylesheet" type="text/x-scss" href="{% static "css/main.scss" %}">
-        <link rel="stylesheet" href="{% static 'css/custom.css' %}"
+        {% comment %} <link rel="stylesheet" href="{% static 'css/custom.css' %}" {% endcomment %}
     {% endcompress %}
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -24,8 +24,12 @@
     {% include 'partials/_review.html' %}
     {% include 'partials/_footer.html' %}
     {% compress js %}
+        <script src="{% static 'js/jquery-3.5.1.js' %}"></script>
+        <script src="{% static 'js/bootstrap.js' %}"></script>
         <script src="{% static 'js/review.js' %}"></script>
         <script src="{% static 'js/galery_apartment.js' %}"></script>
+        <script src="{% static 'js/alert.js' %}"></script>
+        {% comment %} <script src="{% static 'js/bootstrap.bundle.js' %}"></script> {% endcomment %}
     {% endcompress %}
 </body>
 </html>
