--- a/app/templates/partials/_alert.html
+++ b/app/templates/partials/_alert.html
@@ -2,10 +2,17 @@
 {% for message in messages %}
     <div class="container">
         <div class="row">
-            <div class="alert alert-{{message.tags}}">
-                {{message}}
+            <div class="fade show alert alert-{{ message.tags }} alert-dismissible text-center" role="alert">
+                <button type="button" class="close" data-dismiss="alert"><span
+                        aria-hidden="true">&times;</span></button>
+                        <strong>{{ message.title }} </strong> {{ message }}
             </div>
         </div>
     </div>
 {% endfor %}
 {% endif %}
+
+
+{% comment %} <div class="alert alert-{{ message.tags }} alert-dismissible text-center" role="alert">
+                <button type="button" class="close" data-dismiss="alert"><span
+                        aria-hidden="true">&times;</span></button> {% endcomment %}
