--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home Page</title>
     {% compress css %}
-        {% comment %} <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-reboot.css' %}">
-        <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-grid.css' %}"> {% endcomment %}
+        {% comment %} <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-reboot.css' %}"> {% endcomment %}
+        {% comment %} <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-grid.css' %}"> {% endcomment %}
         <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}">
         <link rel="stylesheet" type="text/x-scss" href="{% static "css/main.scss" %}">
         {% comment %} <link rel="stylesheet" href="{% static 'css/custom.css' %}" {% endcomment %}
