--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,27 +3,41 @@
 {% get_static_prefix as STATIC_PREFIX %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     {% compress css %}
-        <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-reboot.css' %}">
-        <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-grid.css' %}">
-        <link rel="stylesheet" type="text/x-scss" href="{% static "css/main.scss" %}">
-        <link rel="stylesheet" href="{% static 'css/custom.css' %}"
-    {% endcompress %}
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-reboot.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-grid.css' %}">
+    <link rel="stylesheet" type="text/x-scss" href="{% static "css/main.scss" %}">
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}" {% endcompress %} <link rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
+
 <body>
     {% include 'partials/_header.html' %}
     {% block content %} {% endblock %}
     {% include 'partials/_review.html' %}
     {% include 'partials/_footer.html' %}
     {% compress js %}
-        <script src="{% static 'js/review.js' %}"></script>
-        <script src="{% static 'js/galery_apartment.js' %}"></script>
+    <script src="{% static 'js/review.js' %}"></script>
+    <script src="{% static 'js/galery_apartment.js' %}"></script>
     {% endcompress %}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+        </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
