--- a/app/templates/pages/apartment.html
+++ b/app/templates/pages/apartment.html
@@ -10,6 +10,55 @@
             </div>
 <!-- Галерея------------------------------- -->
             <div class="col-12 galery">
+                
+                {% if  user.is_authenticated %}
+                <button class="btn--forward" data-toggle="modal" data-target="#exampleModal"
+                    data-whatever="@getbootstrap">Contact with realtor</button>
+                {% endif %}
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form action="{% url 'contact' %}" method="POST">
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <label for="recipient-name" class="col-form-label">Name</label>
+                                        <input type="text" name="name"  value = "{{ user.first_name }} {{ user.last_name }}" class="form-control" id="recipient-name">
+                                        <input type="hidden" name="apartment_id" value="{{ apartment.id }}">
+                                        <input type="hidden" name="apartment_title" value="{{ apartment.title }}">
+                                        <input type="hidden" name="realtor_email" value="{{ apartment.realtor.email }}">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email"  class="col-form-label">Email</label>
+                                        <input type="email" value = "{{user.email}}" name="email" class="form-control" id="email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="phone" class="col-form-label">Phone</label>
+                                        <input type="text"  name="phone" class="form-control" id="phone">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="message-text" class="col-form-label">Message:</label>
+                                        <textarea class="form-control"  name="message" id="message-text"></textarea>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-primary">Send message</button>
+                                    </div>
+                                </form>
+                            </div>
+                          
+                        </div>
+                    </div>
+                </div>
+                
+
 				<div class="main-apartment">
                     <div class="right"> <img src="{{STATIC_PREFIX}}img/apartments/right.png"/> </div>
                     <img src="{{ apartment.photo_0.url }}" width="100%" alt="" id="main">
