--- a/app/templates/pages/contact_us.html
+++ b/app/templates/pages/contact_us.html
@@ -16,7 +16,7 @@
             </div>
             <div class="row">
                 <div class="col-6 photo_contact">
-                    <div class="border"></div>
+                    <div class="img-border"></div>
                     <img src="{{ STATIC_PREFIX }}img/contact_us/Contact_us.png">
                 </div>
                 <div class="col-6 input_div">
