--- a/app/templates/pages/discounts.html
+++ b/app/templates/pages/discounts.html
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col-6 mt-4 image-container">
-                <div class="border"></div>
+                <div class="img-border"></div>
                 <img src="{{STATIC_PREFIX}}img/discounts/discounts.jpg" alt="">
             </div>
             <div class="col-6">
