--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -64,7 +64,7 @@
                 <div class="container">
                     <div class="d-flex justify-between">
                         <div class="col-6 order-img d-flex justify-start">
-                            <div class="border"></div>
+                            <div class="img-border"></div>
                             <img src="{{ STATIC_PREFIX }}img/foto.png">
                         </div>
                         <div class="col-6 order-options">
