--- a/app/templates/pages/order.html
+++ b/app/templates/pages/order.html
@@ -26,7 +26,7 @@
 
         <div class="row mt-4">
             <div class="col-6 order-img">
-                <div class="border"></div>
+                <div class="img-border"></div>
                 <img src="{{STATIC_PREFIX}}img/order/foto.png">
             </div>
             <div class="col-6 order-options">
