--- a/app/app/static/css/views/_apartments.scss
+++ b/app/app/static/css/views/_apartments.scss
@@ -1,4 +1,4 @@
-.apartments{ 
+.apartments {
   .flat--bcg {
     background-color: $bg-main--color-primary_2;
     display: flex;
@@ -38,13 +38,14 @@
 
   }
 
-  button{
-    a{
+  button {
+    a {
       text-decoration: none;
       color: $font-text--color-primary;
     }
-    a:hover{
-color: $default--color__1;
+
+    a:hover {
+      color: $default--color__1;
     }
 
   }
@@ -53,22 +54,22 @@ color: $default--color__1;
     height: 80px;
   }
 
-.border {
-  @include img_border(415px, 315px, 125px, 20px, $bg-img-border--color-primary_1, 16px);
+  .img-border {
+    @include img_border(415px, 315px, 125px, 20px, $bg-img-border--color-primary_1, 16px);
+  }
+
+  .img-border-right {
+    @include img_border(415px, 315px, 0px, 20px, $bg-img-border--color-primary_1, 16px);
+  }
+
+
+  img {
+    position: relative;
+  }
+
+  .imgright {
+    display: flex;
+    justify-content: flex-end;
+  }
+
 }
-
-.border-right{
-  @include img_border(415px, 315px, 0px, 20px, $bg-img-border--color-primary_1, 16px);
-}
-
-
-img{
-position: relative;
-}
-
-.imgright{
-  display: flex;
-  justify-content: flex-end;
-}
-
-}     
