--- a/app/app/static/css/views/_contact_us.scss
+++ b/app/app/static/css/views/_contact_us.scss
@@ -16,7 +16,7 @@
             position: absolute;            
             right: 120px;          
         }
-        .border {
+        .img-border {
             @include img_border(360px,326px,120px,40px,$font-span--color-primary,15px,)        
         }
     }
