--- a/app/app/static/css/views/_discounts.scss
+++ b/app/app/static/css/views/_discounts.scss
@@ -2,7 +2,7 @@
     .image-container{
         position: relative;
     }
-    .border{
+    .img-border{
         @include img_border(375px, 540px, 90px, -55px, $bg-img-border--color-primary_1, 16px);
     }
 }
