--- a/app/app/static/css/views/_order.scss
+++ b/app/app/static/css/views/_order.scss
@@ -3,7 +3,7 @@
     .image-container{
         position: relative;
     }
-    .border{
+    .img-border{
         @include img_border(360px, 485px, 50px, -55px, $bg-img-border--color-primary_1, 16px);
     }
 }
