--- a/app/templates/admin/base_site.html
+++ b/app/templates/admin/base_site.html
@@ -8,4 +8,5 @@ Great Decision
 {% endblock branding %}
 {% block extrastyle %}
 <link rel="stylesheet" href="{% static 'css/admin.css' %}">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 {% endblock extrastyle %}
