--- a/app/templates/pages/apartment.html
+++ b/app/templates/pages/apartment.html
@@ -36,7 +36,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="email" class="col-form-label">Email</label>
-                                        <input type="email" name="email" value={{user.email}} class="form-control" id="email">
+                                        <input type="email" name="email" value="{{ user.email }}" class="form-control" id="email">
                                     </div>
                                     <div class="form-group">
                                         <label for="phone" class="col-form-label">Phone</label>
